--- a/theme/styles.css
+++ b/theme/styles.css
@@ -353,7 +353,7 @@
 .section_3egbpygfsp{height: ; background-color: rgb(222, 222, 222); }
 .section_ZJJRsu{min-height: 30px; background-color: rgba(222,222,222,1); }
 .div_GpsUdX{border-width: 1px; border-style: solid none none; border-color: rgb(222, 222, 222); text-align: center; margin-left: 0px; margin-right: auto; padding-top: 30px; }
-.div_GpsUdX iframe{ width: 500px; height: 281px;}
+.div_70RD3K iframe{ width: 500px; height: 281px;}
 .column_zmPXfF{padding-top: 20px; }
 .column_XMKJUl{padding-top: 20px; }
 .heading_Uc6PRL{font-size: 16px; font-weight: normal; text-align: center; }
@@ -1036,7 +1036,7 @@
 } 
 @media (max-width: 520px) {
 .column_RhSOQe{width: 100%;}
-.div_GpsUdX iframe{ width: 333px; height: 187px;}
+.div_70RD3K iframe{ width: 333px; height: 187px;}
 } 
 @media (min-width: 992px) {} 
 @media (min-width: 768px) and (max-width: 991px) {} 
