--- a/theme/styles.css
+++ b/theme/styles.css
@@ -660,7 +660,8 @@ div.topic .topic-title {
 .image_2OVLQP{width: 25%; margin-top: 25px; background-size: cover; }
 .section_0TxsTH{min-height: 30px; }
 .section_0TxsTH.navlist_U1qhg4{min-height: 30px; background-color: rgba(204,204,204,1); }
-.container_NTlCsu{min-height: 30px; background-color: rgb(255, 255, 255); margin: 20px auto; border-radius: 10px;}
+.container_NTlCsu{min-height: 30px;}
+.container_ubtforros{min-height: 30px; background-color: rgb(255, 255, 255); margin: 20px auto; border-radius: 10px;}
 .row_3qfiKf{min-height: 30px; }
 .column_2WXpWu{min-height: 30px; }
 .column_qsGhhl{min-height: 30px; }
