--- a/theme/styles.css
+++ b/theme/styles.css
@@ -414,7 +414,7 @@ div.topic .topic-title {
 .heading_xJyd5f{font-size: 50px; text-align: left;}
 .paragraph_sn25fL{font-size: 20px; width: 200px; text-align: left; }
 .button_3NK6nh{display: block; position: absolute; width: 160px; height: 30px; margin-left: 95px; margin-right: auto; font-size: 12px; font-weight: 100; font-family: arial, helvetica, sans-serif; bottom: 0px; right: 0px; top: 267px; left: 0px; background-color: rgba(234, 83, 48, 0.498039); }
-.div_IAOVi0{position: absolute; right: 0px; margin-top: 38%; margin-right: 12%; }
+.div_IAOVi0{position: absolute; right: 0px; margin-top: 34%; margin-right: 12%; }
 .heading_gQ3dHB{font-family: 'Microsoft YaHei', 'Hiragino Sans GB', SimHei, STHeiti宋体; font-weight: 600; font-size: 50px; margin: 0px; color: rgb(255, 255, 255); text-align: left;}
 .paragraph_cuvMDE{font-size: 20px; font-weight: 100; font-family: 'Microsoft YaHei', 'Hiragino Sans GB', SimHei, STHeiti宋体; color: rgb(250, 247, 247); text-align: left;}
 .button_3NK6nh.c-state1{transform: rotate(0deg) scale(1.2) translate(0%,133%); -webkit-transform: rotate(0deg) scale(1.2) translate(0%,133%); transition: All 0s ease; -webkit-transition: All 0s ease; background-color: rgba(0, 140, 219, 0.8); -ms-transform: rotate(0deg) scale(1.2) translate(0%,133%); -o-transform: rotate(0deg) scale(1.2) translate(0%,133%); -moz-transform: rotate(0deg) scale(1.2) translate(0%,133%); -ms-transition: All 0s ease; -o-transition: All 0s ease; -moz-transition: All 0s ease; }
@@ -1396,3 +1396,9 @@ div.topic .topic-title {
 } 
 @media (min-width: 992px) {} 
 @media (min-width: 768px) and (max-width: 991px) {} 
+
+
+iframe.joinus{width: 100%; height: 523px;}
+div.logo {height: 100%;}
+
+
